# tiny_httpie

./: .gitignore  LICENSE  README.md  config.sh  requirements.txt  setup.cfg  tihttp.py  tox.ini
docs/source/: conf.py  index.rst
src/tihttp/: __init__.py  __main__.py
tests/: test_tihttp.py
