[metadata]
name = tihttp
version = 0.1.0
author = Arnold Mokira
author_email = dr.mokira@gmail.com
description = Just a test.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = http, request
license = MIT License
url = https://github.com/mokira3d48/tiny_httpie
project_urls =
    repository = https://github.com/mokira3d48/tiny_httpie
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requies =
	requests>=2.31

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    tihttp = tihttp.__main__:run_main

[options.extras_require]
dev =
	pytest

